Implmented Enum serlialization to and from the model